--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -2,55 +2,79 @@
 <RelativeLayout android:id="@+id/RelativeLayout01"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#C0C0C0"
+    android:background="@drawable/color_background"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-
 
     <ImageView
         android:id="@+id/appIcon"
         android:adjustViewBounds="true"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_height="150dp"
         android:layout_width="match_parent"
         android:layout_gravity="top"
         android:scaleType="fitXY"
-
-        android:src="@drawable/main"/>
-
+        android:src="@drawable/main_background"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        android:onClick="registerStudent"
         android:id="@+id/button"
-        android:layout_centerVertical="true"
+        android:layout_width="450dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="74dp"
+        android:background="@drawable/button_states_options"
+        android:text="REGISTER"
+        android:textColor="#F0F0F0"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:onClick="registerStudent"
+        android:textSize="40dp"
+        android:layout_below="@+id/appIcon"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Record Activities"
-        android:layout_centerInParent="true"
-        android:onClick="recordActivity"
-        android:layout_below="@+id/button"
-        android:layout_marginTop="20dp"
-        android:id="@+id/button2"
-
-        />
+        android:id="@+id/button3"
+        android:layout_width="450dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/button_states_options"
+        android:text="REPORT GENERATION"
+        android:textColor="#F0F0F0"
+        android:onClick="generateReport"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:textSize="40dp"
+        android:layout_below="@+id/button2"
+        android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Report generation"
-        android:onClick="generateReport"
-        android:layout_below="@+id/button2"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
-        android:id="@+id/button3"
-        />
+        android:id="@+id/button2"
+        android:layout_width="450dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/button_states_options"
+        android:text="RECORD ACTIVITIES"
+        android:textColor="#F0F0F0"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:textSize="40dp"
+        android:onClick="recordActivity"
+        android:layout_below="@+id/button"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="450dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/button_states_options"
+        android:text="LOGOUT"
+        android:textColor="#F0F0F0"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:textSize="40dp"
+        android:layout_below="@+id/button3"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
 
