--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -1,82 +1,82 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="redflag.capstone.com.redflag.StudentDetailsActivity"
-    android:background="@drawable/mainbackground">
+    android:padding="10dip"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:weightSum="1">
+
+
+    <LinearLayout android:id="@+id/LinearLayout02"
+        android:orientation="vertical"
+        android:layout_width="373dp"
+        android:layout_height="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!--<TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:text="Select Report Type:"
+        android:layout_marginBottom="5dp"/>
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        /> -->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="20dp"
+        android:text="Select student"
+        />
+
+    </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/stdReport"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#F3F781"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:layout_marginBottom="50dp">
-
-       <!-- <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Student Detail"
-            android:textStyle="bold"
-            android:textColor="#E06C24"
-            android:textSize="30dp"/>-->
-
-        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="47dp"
+            android:orientation="horizontal">
 
-            <TableRow>
-                <TextView android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#372c24"
-                    android:text="Student Name"
-                    android:layout_marginLeft="60dp"
-                    android:layout_marginRight="60dp"/>
+            <TextView android:id="@+id/column_header1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                />
+            <TextView android:id="@+id/column_header2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                />
+            <TextView android:id="@+id/column_header3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.5"
+                />
+            <TextView android:id="@+id/column_header4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                />
+        </LinearLayout>
 
-                <EditText android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#372c24"
-                    android:paddingLeft="80dp"/>
-            </TableRow>
+        <ListView
+            android:id="@+id/listView1"
+            android:layout_width="622dp"
+            android:layout_height="196dp"
+            android:layout_weight="8.65">
+        </ListView>
 
-            <TableRow>
-                <TextView android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#372c24"
-                    android:text="School"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Report"
+        android:onClick="viewData"
+        android:id="@+id/button5"
+        android:layout_gravity="center_horizontal" />
 
-                <EditText android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#372c24"
-                    android:paddingLeft="80dp"/>
-            </TableRow>
 
-            <TableRow>
-                <TextView android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#372c24"
-                    android:text="Class"/>
-
-                <EditText android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#372c24"
-                    android:paddingLeft="80dp"/>
-            </TableRow>
-
-            <TableRow>
-                <TextView android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#372c24"
-                    android:text="Age"/>
-
-                <EditText android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#372c24"
-                    android:paddingLeft="80dp"/>
-            </TableRow>
-
-        </TableLayout>
-    </LinearLayout>
 </LinearLayout>
