--- a/app/src/main/res/layout/activity_student_details.xml
+++ b/app/src/main/res/layout/activity_student_details.xml
@@ -39,54 +39,56 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="126dp"
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
         android:orientation="horizontal">
 
 
             <TextView android:id="@+id/column_header1"
-                android:layout_width="120dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 />
             <TextView android:id="@+id/column_header2"
-                android:layout_width="120dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 />
             <TextView android:id="@+id/column_header3"
-                android:layout_width="120dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="1.5"
                 />
+        <TextView android:id="@+id/column_header4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            />
         </LinearLayout>
 
         <ListView
             android:id="@+id/listView1"
             android:layout_width="match_parent"
-            android:layout_height="161dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true">
+            android:layout_height="wrap_content"
+            >
         </ListView>
 
 
         <LinearLayout
             android:layout_width="374dp"
             android:layout_height="74dp"
-            android:orientation="horizontal">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="View Student details"
-            android:id="@+id/button5" />
+            android:orientation="horizontal"
+            android:weightSum="1">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Record Activities"
+
             android:id="@+id/button13"
             android:onClick="Recording"
-            android:layout_gravity="right" />
+
+            />
 
             </LinearLayout>
 
