--- a/app/src/main/res/layout/row_listview.xml
+++ b/app/src/main/res/layout/row_listview.xml
@@ -7,31 +7,31 @@
     <TextView
         android:id="@+id/studid"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_weight="1"
-        android:textStyle="bold"
-        android:text="Student IDs"/>
+
+        android:text="ID"/>
 
     <TextView
         android:id="@+id/studname"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_weight="1.5"
+        android:layout_width="0dp"
+        android:layout_weight="2"
 
-        android:text="Student Names"/>
+        android:text="Student Name"/>
 
     <TextView
         android:id="@+id/studschool"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_weight="1.5"
         android:text="School"/>
 
     <TextView
         android:id="@+id/studgrade"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_weight="0.5"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:text="Grade"/>
 
 
